--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ before_install:
 
 install:
   - conda create -q -y -n test-environment python=$TRAVIS_PYTHON_VERSION
-  - conda install matplotlib=2.1.0
-  - conda install numpy=1.13.3
-  - conda install scipy=0.19.1
+  - conda install -y matplotlib=2.1.0
+  - conda install -y numpy=1.13.3
+  - conda install -y scipy=0.19.1
   - source activate test-environment
 
 script:
