--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,30 @@
 language: python
-
 python:
+  # We don't actually use the Travis Python, but this keeps it organized.
+  - "2.7"
+  - "3.5"
   - "3.6"
-
-before_install:
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+install:
+  - sudo apt-get update
+  # We do this conditionally because it saves us some downloading if the
+  # version is the same.
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
-  - conda update -q  -y conda
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
 
-install:
-  - conda create -q -y -n test-environment python=$TRAVIS_PYTHON_VERSION
-  - conda install -y matplotlib=2.1.0
-  - conda install -y numpy=1.13.3
-  - conda install -y scipy=0.19.1
+  # Replace dep1 dep2 ... with your dependencies
+  - conda create -q -y -n test-environment python=$TRAVIS_PYTHON_VERSION matplotlib=2.1.0 numpy=1.13.3 scipy=0.19.1
   - source activate test-environment
+  - python setup.py install
 
 script:
-- py.test -v -rs test
+  py.test test
