--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -y -n test-environment python=$TRAVIS_PYTHON_VERSION -f environment.yml
+  - conda create -q -y -n test-environment -f environment.yml python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
 
 script:
