Move to container-based environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: python
+
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
   - "3.6"
+
+sudo: false
+
 install:
-  - sudo apt-get update
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
@@ -19,7 +22,6 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
 
-  # Replace dep1 dep2 ... with your dependencies
   - conda create -q -y -n test-environment -f environment.yml python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
 
