--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
 
-  - conda create -q -y -n test-environment -f environment.yml python=$TRAVIS_PYTHON_VERSION
+  - conda env create -q -n test-environment -f environment.yml python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
 
 script:
