--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-
-  - conda env create -q -n test-environment -f environment.yml python=$TRAVIS_PYTHON_VERSION
+  - conda env create -n test-environment -f environment.yml python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
 
 script:
