--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
+sudo: false
 language: python
 
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
   - "3.6"
 
-sudo: false
+cache:
+  apt: true
+  pip: true
 
-install:
+before_install:
+  # Fake X environment (see http://docs.travis-ci.com/user/gui-and-headless-browsers/)
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   # We do this conditionally because it saves us some downloading if the
   # version is the same.
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
@@ -21,7 +27,9 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-  - conda env create -n test-environment -f environment.yml python=$TRAVIS_PYTHON_VERSION
+
+install:
+  - conda env create -f environment.yml python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
 
 script:
