--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,8 @@ before_install:
   - conda info -a
 
 install:
-  - conda env create -f environment.yml python=$TRAVIS_PYTHON_VERSION
+  - conda env create -q -f environment.yml python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
 
 script:
-  - conda env export  # Debug
-  - py.test test
+  - PYTHONPATH=. pytest test
